# Text-to-SQL-LLM-App

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  sql.py
